--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,7 @@
-name: Publish packages to NPM
+name: Publish packages to GitHub NPM Registry
 on:
-  push:
-    tags:
-      - '[0-9]+.[0-9]+.[0-9]+'
+  release:
+    types: [created]
 jobs:
   publish:
     name: Publish package. 
@@ -14,8 +13,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
-          registry-url: 'https://registry.npmjs.org'
+          node-version: 18.x
+          registry-url: https://registry.npmjs.org
       - run: npm ci
       - run: npm run build --scripts-prepend-node-path=auto
       - run: npm publish --access=public
